Implemented a builder pattern for the Model classes